# app-pomodoro-py

./: AGENTS.md  INSTALL.md  README.md  TODO.docx  config-pomodoro.json  furripe-config.json  pyproject.toml
docs/claude_tmp/: init_example.txt
src/pomodoro/: main.py
src/pomodoro/interfaces/: i_active_session_view.py  i_config_repository.py  i_history_service.py  i_history_view.py  i_pomodoro_detail_view.py  i_pomodoro_edit_view.py  i_pomodoro_list_view.py  i_pomodoro_service.py  i_session_service.py  i_sound_repository.py  i_sound_service.py  i_todo_list_view.py  i_todo_service.py
src/pomodoro/models/: active_session_model.py  active_session_view_state.py  app_config_model.py  app_state_model.py  pomodoro_collection_model.py  pomodoro_detail_view_state.py  pomodoro_edit_view_state.py  pomodoro_history_collection_model.py  pomodoro_history_entry_model.py  pomodoro_history_row_state.py  pomodoro_list_view_state.py  pomodoro_model.py  pomodoro_row_state.py  sound_settings_model.py  todo_collection_model.py  todo_history_collection_model.py  todo_history_entry_model.py  todo_history_row_state.py  todo_item_model.py  todo_row_state.py
src/pomodoro/presenters/: active_session_presenter.py  history_presenter.py  pomodoro_detail_presenter.py  pomodoro_edit_presenter.py  pomodoro_list_presenter.py  todo_list_presenter.py
src/pomodoro/repositories/: config_repository.py  sound_repository.py
src/pomodoro/services/: history_service.py  pomodoro_service.py  session_service.py  sound_service.py  todo_service.py
src/pomodoro/shared/: i18n_fra.py  validation_result.py
src/pomodoro/shared/enums/: copy_mode_enum.py  main_view_enum.py  pomodoro_history_status_enum.py  pomodoro_sort_mode_enum.py  todo_state_enum.py
src/pomodoro/shared/errors/: app_error.py  base_error.py  config_error.py  history_error.py  pomodoro_error.py  session_error.py  sound_error.py  todo_error.py
src/pomodoro/shared/exceptions/: repository_exception.py
src/pomodoro/views/: active_session_view.py  history_view.py  main_window_view.py  pomodoro_card_widget.py  pomodoro_detail_view.py  pomodoro_edit_view.py  pomodoro_history_table_model.py  pomodoro_list_view.py  todo_history_table_model.py  todo_list_view.py  todo_table_model.py
tests/: conftest.py
tests/models/: test_active_session_model.py  test_app_config_model.py  test_app_state_model.py  test_pomodoro_collection_model.py  test_pomodoro_history_collection_model.py  test_pomodoro_model.py  test_todo_collection_model.py  test_todo_history_collection_model.py  test_todo_item_model.py
tests/presenters/: conftest.py  test_active_session_presenter.py  test_history_presenter.py  test_pomodoro_detail_presenter.py  test_pomodoro_edit_presenter.py  test_pomodoro_list_presenter.py  test_todo_list_presenter.py
tests/repositories/: test_config_repository.py
tests/services/: test_history_service.py  test_pomodoro_service.py  test_session_service.py  test_todo_service.py
tests/shared/: test_validation_result.py
tests/shared/errors/: test_base_error.py
tools/: furripe.py
